Fixed text wrapping issue

--- a/SITE/resources/style.css
+++ b/SITE/resources/style.css
@@ -92,6 +92,7 @@ body {
   right: 0;
   font-size: 1.6vw;
   line-height: 1.8;
+  white-space: nowrap;
   
   background: rgb(55, 55, 55);
   padding-top: 4vh;
